Fix required indicator contrast for dark mode

--- a/admin/style/default-dark.css
+++ b/admin/style/default-dark.css
@@ -1103,7 +1103,7 @@ label.required {
   font-weight: bold; }
 
 label.required abbr {
-  color: #ae323b;
+  color: #f783b3;
   font-size: 1.3em;
   text-decoration: none; }
 
