--- a/admin/style/scss/partials/_forms.scss
+++ b/admin/style/scss/partials/_forms.scss
@@ -202,7 +202,7 @@ label.required {
   font-weight: bold;
 }
 label.required abbr {
-  color: $error-alt;
+  color: $required;
   font-size: 1.3em;
   text-decoration: none;
 }
